--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,14 +3,14 @@
 
 <head>
     {% if title %}
-    <title>{{ title }} - CampusConnect</title>
+    <title>{{ title }} - PeerSpace</title>
     {% else %}
-    <title>Welcome to CampusConnect</title>
+    <title>Welcome to PeerSpace</title>
     {% endif %}
 </head>
 
 <body>
-    <div>CampusConnect:
+    <div>PeerSpace:
         <a href="{{ url_for('index') }}">Home</a>
         {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}">Login</a>
