--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -4,7 +4,7 @@
             <img src="{{ post.author.avatar(36) }}">
         </td>
         <td>
-            {{ post.author.username }} posted: <br>{{ post.body }}
+            <a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a> posted: <br>{{ post.body }}
         </td>
     </tr>
 </table>
