--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>File Not Found</h1>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+    <div class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
+        <h1 class="text-4xl font-bold text-gray-800 mb-4">404: File Not Found</h1>
+        <p class="text-lg text-gray-600 mb-8">Oops! The page you're looking for doesn't exist.</p>
+        <a href="{{ url_for('index') }}" class="px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg hover:bg-blue-600 transition duration-300 ease-in-out">
+            Back to Home
+        </a>
+    </div>
 {% endblock %}
