--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>An unexpected error has occurred</h1>
-    <p>The administrator has been notified. Sorry for the inconvenience!</p>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+    <div class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
+        <h1 class="text-4xl font-bold text-red-600 mb-4">An unexpected error has occurred</h1>
+        <p class="text-lg text-gray-600 mb-4">The administrator has been notified. Sorry for the inconvenience!</p>
+        <a href="{{ url_for('index') }}" class="px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg hover:bg-blue-600 transition duration-300 ease-in-out">
+            Back to Home
+        </a>
+    </div>
 {% endblock %}
