--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,10 +1,18 @@
-<table>
-    <tr style="vertical-align: top;">
-        <td>
-            <img src="{{ post.author.avatar(36) }}">
-        </td>
-        <td>
-            <a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a> posted: <br>{{ post.body }}
-        </td>
-    </tr>
-</table>
+<div class="flex space-x-3 p-4">
+    <div class="flex-shrink-0">
+        <img class="h-10 w-10 rounded-full" src="{{ post.author.avatar(40) }}" alt="{{ post.author.username }}'s avatar">
+    </div>
+    <div class="min-w-0 flex-1">
+        <p class="text-sm font-medium text-gray-900">
+            <a href="{{ url_for('user', username=post.author.username) }}" class="hover:underline">
+                {{ post.author.username }}
+            </a>
+        </p>
+        <p class="text-sm text-gray-500">
+            {{ post.timestamp.strftime('%B %d, %Y at %I:%M %p') }}
+        </p>
+        <div class="mt-2 text-sm text-gray-700">
+            {{ post.body }}
+        </div>
+    </div>
+</div>
