--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,18 +1,37 @@
-<div class="flex space-x-3 p-4">
-    <div class="flex-shrink-0">
-        <img class="h-10 w-10 rounded-full" src="{{ post.author.avatar(40) }}" alt="{{ post.author.username }}'s avatar">
-    </div>
-    <div class="min-w-0 flex-1">
-        <p class="text-sm font-medium text-gray-900">
-            <a href="{{ url_for('user', username=post.author.username) }}" class="hover:underline">
-                {{ post.author.username }}
-            </a>
-        </p>
-        <p class="text-sm text-gray-500">
-            {{ post.timestamp.strftime('%B %d, %Y at %I:%M %p') }}
-        </p>
-        <div class="mt-2 text-sm text-gray-700">
-            {{ post.body }}
+<article class=""> <!-- bg-white rounded-lg shadow-sm mb-4 -->
+    <div class="flex space-x-4 p-4">
+        <div class="flex-shrink-0">
+            <img class="h-12 w-12 rounded-full border border-gray-200" src="{{ post.author.avatar(48) }}" alt="{{ post.author.username }}'s avatar">
+        </div>
+        <div class="min-w-0 flex-1">
+            <div class="flex items-center justify-between mb-1">
+                <p class="text-sm font-medium text-gray-900">
+                    <a href="{{ url_for('user', username=post.author.username) }}" class="hover:underline">
+                        {{ post.author.username }}
+                    </a>
+                </p>
+                <p class="text-xs text-gray-500">
+                    {{ moment(post.timestamp).fromNow() }}
+                </p>
+            </div>
+            <div class="prose prose-sm max-w-none text-gray-700">
+                {{ post.body | safe }}
+            </div>
+            <!-- <div class="mt-3 flex items-center space-x-4 text-xs text-gray-500">
+                <button class="flex items-center hover:text-blue-600">
+                    <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"></path></svg>
+                    Like
+                </button>
+                <button class="flex items-center hover:text-blue-600">
+                    <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z"></path></svg>
+                    Comment
+                </button>
+                <button class="flex items-center hover:text-blue-600">
+                    <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"></path></svg>
+                    Share
+                </button>
+            </div> -->
         </div>
     </div>
-</div>
+</article>
+
