--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👥</text></svg>">
     {% if title %}
     <title>{{ title }} - PeerSpace</title>
     {% else %}
@@ -35,12 +36,16 @@
                                     class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Explore</a>
                                 <a href="{{ url_for('user', username=current_user.username) }}"
                                     class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Profile</a>
-                                <a href="{{ url_for('logout') }}"
-                                    class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Logout</a>
                                 {% endif %}
                             </div>
                         </div>
                     </div>
+                    {% if not current_user.is_anonymous %}
+                    <div class="hidden md:block">
+                        <a href="{{ url_for('logout') }}"
+                            class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Logout</a>
+                    </div>
+                    {% endif %}
                     <div class="-mr-2 flex md:hidden">
 
                         <button @click="isOpen = !isOpen" type="button"
